--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -44,6 +44,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">A propos</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact_us">Contacter Nous</a>
+          </li>
         </ul>
     
         
